fix form spacing

--- a/public/css/formStyle.css
+++ b/public/css/formStyle.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   height: 85vh;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 /*---------------------------- INPUT BOXES ------------------------------*/
@@ -72,6 +72,7 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 1rem;
+  margin-top: 2rem;
 }
 
 .step {
